# Praxis-Motion-Intelligence

./: .gitignore  README.md  STGCN_TRANSFORMER_EXPLAINER.md  app.py  explanatoin  hackathon_pitch_deck.html  main.py  package-lock.json  package.json  praxis_movement_intelligence_architecture.drawio  pyproject.toml  vite.config.js
data/: basic_condition_model.json  deep_learning_training_summary.json  form_calibration.json  injury.json  normal.json  reference_patterns.json  stroke.json  stroke_rules.json  stroke_thresholds.json  ucf_reference_stats.json
data/demo_landmarks/: stroke_gait_asymmetry.json  tai_chi_balanced.json
frontend/: index.html
frontend/src/: App.jsx  styles.css
models/: stgcn_transformer_demo.pt
scripts/: build_basic_condition_model.py  build_condition_profiles.py  build_ucf_reference_stats.py  calibrate_dataset.py  extract_stroke_thresholds.py  generate_pitch_pdf.py  train_stgcn_transformer.py
src/praxis_ai/: __init__.py  analysis.py  basic_model.py  calibration.py  deep_learning.py  models.py  pose_estimation.py  reference_data.py  rehab.py  reporting.py  server.py
src/praxis_ai/templates/: index.html  report.html
